gateway/manifests/services-bridges.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service-bridge
spec:
  type: ExternalName
  externalName: user-service.services
---
apiVersion: v1
kind: Service
metadata:
  name: interview-service-bridge
spec:
  type: ExternalName
  externalName: interview-service.services
---
apiVersion: v1
kind: Service
metadata:
  name: conversation-service-bridge
spec:
  type: ExternalName
  externalName: conversation-service.services
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service-bridge
spec:
  type: ExternalName
  externalName: payment-service.services
