gateway/manifests/services-bridges.yml
apiVersion: v1
kind: Service
metadata:
  name: conversation-service-bridge
spec:
  type: ExternalName
  externalName: conversation-service.services
