gateway/manifests/services-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: services-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /users(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: user-service-bridge
            port:
              number: 80
      - path: /interviews(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: interview-service-bridge
            port:
              number: 80
      - path: /conversations(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: conversation-service-bridge
            port:
              number: 80
      - path: /payments(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: payment-service-bridge
            port:
              number: 80
